k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: demo
  labels:
    app: demo

spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      volumes:
        - name: demo-config-volume
          configMap:
            name: demo-config
            items:
              - key: config
                path: config.json
      containers:
        - name: demo
          image: marloto/simple-express-js:v1.3
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /usr/src/app/config/
              name: demo-config-volume
              readOnly: true
          # env:
            # - name: GREETING
            #   value: 'Hello, Other!'
            # - name: GREETING
            #   valueFrom:
            #     configMapKeyRef:
            #       name: demo-config
            #       key: greeting
