k8s/deployment_mongo.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "mongo-db"
  namespace: "development"
spec:
  selector:
    matchLabels:
      app: "mongo-db"
  replicas: 1
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: "mongo-db"
    spec:
      containers:
        - name: "mongo-db"
          image: "mongo"
          imagePullPolicy: "Always"
          ports:
            - containerPort: 27017
              name: "mongodb"

          volumeMounts:
            - name: "mongodb-persistent-storage"
              mountPath: "/data/db"
          resources:
            - 

      volumes:
        - name: "mongodb-persistent-storage"
          persistentVolumeClaim:
            claimName: "mongodb-pvc"
