k8s/eventservice.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: caseeventservice
  labels:
    app: caseeventservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caseeventservice
  template:
    metadata:
      labels:
        app: caseeventservice
    spec:
      containers:
        - name: caseeventservice
          image: moritzzeitler/case:caseeventservice
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "1Gi"
              cpu: "100m"
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: caseeventservice
  labels:
    app: caseeventservice
spec:
  selector:
    app: caseeventservice
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
