k8s/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: casemongo
  name: casemongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: casemongo
  strategy: {}
  template:
    metadata:
      labels:
        app: casemongo
    spec:
      containers:
        - image: mongo
          name: casemongo
          ports:
            - containerPort: 27017
          resources:
            limits:
              memory: "200Mi"
              cpu: "100m"
          volumeMounts:
            - name: mongo-data-dir
              mountPath: /data/db
      volumes:
        - name: mongo-data-dir
          persistentVolumeClaim:
            claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: casemongo
  name: casemongo
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: casemongo
