k8s/mongo_service.yml
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "mongo-db"
    namespace: "development"
    labels: 
      app: "mongo-db"
  spec: 
    ports: 
      - 
        name: "mongodb"
        port: 27017
        nodePort: 27017
    type: "NodePort"
    selector: 
      app: "mongo-db"
