k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: magicmirror
  labels:
    app: magicmirror

spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: magicmirror
  type: ClusterIP
