k8s/weatherservice.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: caseweatherservice
  labels:
    app: caseweatherservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caseweatherservice
  template:
    metadata:
      labels:
        app: caseweatherservice
    spec:
      containers:
        - name: caseweatherservice
          image: moritzzeitler/case:caseweatherservice
          ports:
            - containerPort: 50505
          resources:
            limits:
              memory: "200Mi"
              cpu: "100m"
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: caseweatherservice
  labels:
    app: caseweatherservice
spec:
  selector:
    app: caseweatherservice
  ports:
    - port: 50505
      protocol: TCP
      targetPort: 50505
  type: ClusterIP
