k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caseweatherservice-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: caseweatherservice
                port:
                  number: 50505
            path: /weather
            pathType: Prefix
